Fixed index paragraphs and overlapping. Added web icon. Added missing pages

--- a/style/main.css
+++ b/style/main.css
@@ -1,25 +1,24 @@
 @charset "utf-8";
-
 body {
     background-color: lightcyan;
     color: darkblue;
-    margin:0;
+    margin: 0;
 }
 
 body ul {
     list-style-type: none;
 }
 
-#logo { 
-	position:fixed;
-    padding: 0px 0; 
-	top:0; 
-	left:0; 
-} 
+#logo {
+    position: fixed;
+    padding: 0px 0;
+    top: 0;
+    left: 0;
+}
 
 .button {
     text-decoration: none;
-    padding:5px;
+    padding: 5px;
     color: #276678;
     border-radius: 290486px;
     font-size: 0.6em;
@@ -33,33 +32,34 @@ body ul {
     color: white;
 }
 
-h1, h2 {
+h1,
+h2 {
     color: darkblue;
 }
 
 nav {
-    font-size:30px;
-	position: sticky;
-	top: 0px;
+    font-size: 30px;
+    position: sticky;
+    top: 0px;
     background-color: #276678;
     z-index: 1;
 }
-    
+
 nav ul {
     list-style-type: none;
-    float:right;
-    margin:35px;
+    float: right;
+    margin: 35px;
 }
 
 nav ul li.menu {
-    float:left;
-    padding:10px;
-    margin-right:10px;
+    float: left;
+    padding: 10px;
+    margin-right: 10px;
 }
 
 nav ul li.menu a {
     text-decoration: none;
-    padding:5px;
+    padding: 5px;
     color: white;
     border-radius: 290486px;
     font-size: 0.6em;
@@ -77,12 +77,53 @@ li.link a {
     text-decoration: none;
 }
 
-#welcome h1,h2 {
-margin-left:300px; 
-margin-right:40%;
-margin-top:50px; 
-margin-bottom:50px;
-text-align: justify;
+#welcome h1,
+#welcome p {}
+
+div#about {
+    display: inline-block;
+    margin-left: 5%;
+    width: 50%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: justify;
+    font-size: 1.4rem;
+}
+
+div#cv_img {
+    display: inline-block;
+    margin-left: 5%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    width: 40%;
+    background-color: #E2E2E2;
+    position: absolute;
+    background-color: inherit;
+}
+
+.wrapper button {
+    text-decoration: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+    background-color: #276678;
+    color: white;
+    border-radius: 290486px;
+    border: none;
+    font-size: 0.6em;
+    letter-spacing: 0.2em;
+}
+
+.wrapper button:hover {
+    transition: none 400ms ease-out;
+    transition-property: color, background;
+    background-color: #1687a7;
+    color: white;
+}
+
+p {
+    text-align: left;
 }
 
 footer {
@@ -90,15 +131,20 @@ footer {
     bottom: 0;
     width: 100%;
     background-color: #276678;
-    color:white;
+    color: white;
+}
+
+footer p {
+    margin-bottom: 0px;
 }
 
 footer a {
-    color:white;
-    margin-left:70%;
+    color: white;
+    float: right;
+    text-align: right;
+    margin-right: 30px;
 }
 
 #footertext {
-    margin-left:30px;
-
+    margin-left: 30px;
 }
